gcc/testsuite/rust/rustc/ui/entry-point/auxiliary/bad_main_functions_dg.rs
pub fn boilerplate(x: u8) {}
// { dg-error "" "" { target *-*-* } .-1 }

